--- a/app/views/notifications_mailer/orange_money_payment_confirmed.fr.html.slim
+++ b/app/views/notifications_mailer/orange_money_payment_confirmed.fr.html.slim
@@ -6,7 +6,7 @@
 |Chèr(e), #{resource.user.display_name}!
 br
 br
-|Ce mail confirme votre #{resource.class.model_name.human} pour #{link_to(resource.project.name, project_url(resource.project))}. Veuillez garder cet email comme preuve de votre paiement Orange money.
+|Ce mail confirme votre #{resource.class.model_name.human} à #{link_to(resource.project.name, project_url(resource.project))}. Veuillez garder cet email comme reçu de votre paiement Orange money.
 br
 br
 |Montant de la #{resource.class.model_name.human}:
@@ -19,6 +19,14 @@ br
 |Référence du paiement:
 strong #{resource.transaction_number}
 br
+- if resource.is_a?(Contribution)
+  - if resource.project.flexible?
+    br
+    |Vous serez prévenu du financement du projet.
+  - else
+    br
+    |
+  br
 br
 |Si vous souhaitez contacter #{resource.project.user.name}, envoyez un email à #{mail_to resource.project.user.email}.
 br
